--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "typescript": "^5.0.4",
     "vitest": "1.3.0",
     "wrangler": "^3.0.0"
+  },
+  "dependencies": {
+    "hono": "^4.2.1",
+    "replicate": "^0.29.1"
   }
 }
