--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 wrangler.toml
+.dev.vars
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 
